// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiHeaderLogo is rendered 1`] = `
<a
  aria-label="aria-label"
  class="ouiHeaderLogo testClass1 testClass2"
  data-test-subj="test subject string"
  rel="noreferrer"
>
  <span
    aria-label="OpenSearch"
    class="ouiHeaderLogo__icon"
    data-ouiicon-type="logoOpenSearch"
  />
</a>
`;

exports[`OuiHeaderLogo renders href 1`] = `
<a
  class="ouiHeaderLogo"
  href="#"
  rel="noreferrer"
>
  <span
    aria-label="OpenSearch"
    class="ouiHeaderLogo__icon"
    data-ouiicon-type="logoOpenSearch"
  />
</a>
`;

exports[`OuiHeaderLogo renders href with rel 1`] = `
<a
  class="ouiHeaderLogo"
  href="#"
  rel="noreferrer"
>
  <span
    aria-label="OpenSearch"
    class="ouiHeaderLogo__icon"
    data-ouiicon-type="logoOpenSearch"
  />
</a>
`;

exports[`OuiHeaderLogo renders optional props 1`] = `
<a
  class="ouiHeaderLogo"
  rel="noreferrer"
  style="color:red"
>
  <span
    aria-label="Moby Dick"
    class="ouiHeaderLogo__icon"
    data-ouiicon-type="alert"
  />
</a>
`;
